...
    return PageScaffold(
      title: "设置",
      actions: const [],
      body: ListView(
        padding: const EdgeInsets.only(bottom: 96.0),
        children: [
          const _SectionHeader(title: "音乐库"),
          const AudioLibraryEditor(),
          const SizedBox(height: 8.0),
          const _SectionHeader(title: "缓存"),
          const CacheManagementSettings(),
          const SizedBox(height: 8.0),
          const _SectionHeader(title: "歌词"),
...
